tests/ui/repeat-expr/repeat-to-run-dtor-twice.stderr
error[E0277]: the trait bound `Foo: Copy` is not satisfied
  --> $DIR/repeat-to-run-dtor-twice.rs:17:15
   |
LL |     let _ = [ a; 5 ];
   |               ^ the trait `Copy` is not implemented for `Foo`
   |
   = note: the `Copy` trait is required because this value will be copied for each element of the array
   = help: consider using `core::array::from_fn` to initialize the array
   = help: see https://doc.rust-lang.org/stable/std/array/fn.from_fn.html for more information
help: consider annotating `Foo` with `#[derive(Copy)]`
   |
LL + #[derive(Copy)]
LL | struct Foo {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
